--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "socket.io": "^2.1.1"
+  },
+  "dependencies": {
+    "modules": "^0.4.0",
+    "require.js": "^1.0.0"
   }
 }
