--- a/Ordbog/package.json
+++ b/Ordbog/package.json
@@ -25,10 +25,10 @@
     "socket.io": "^2.1.1"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "debug": "~2.6.9",
     "ent": "^2.2.0",
-    "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "modules": "^0.4.0",
