--- a/Ordbog/package.json
+++ b/Ordbog/package.json
@@ -2,9 +2,9 @@
   "name": "sprogappeasjdat17-master",
   "version": "1.0.0",
   "description": "En sprogapp i samarbejde med Sovsen, Team T og 69",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
